--- a/examples/hello_ssd1306/CMakeLists.txt
+++ b/examples/hello_ssd1306/CMakeLists.txt
@@ -1,11 +1,15 @@
 cmake_minimum_required(VERSION 3.13)
 
+# Pull in SDK (must be before project)
 include(pico_sdk_import.cmake)
 
 project(hello_lcd_project C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
+if (PICO_SDK_VERSION_STRING VERSION_LESS "2.1.0")
+    message(FATAL_ERROR "Raspberry Pi Pico SDK version 2.1.0 (or later) required. Your version is ${PICO_SDK_VERSION_STRING}")
+endif()
 pico_sdk_init()
 
 add_executable(hello_lcd main.cc)
